[gd_scene load_steps=2 format=3 uid="uid://bkec43uvowmr7"]

[ext_resource type="Script" uid="uid://dpwdwuj7e2gye" path="res://scenes/ui_prefabs/audio_control_buttons/audio_control_buttons.gd" id="1_io1ax"]

[node name="AudioControlButtons" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_io1ax")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="PlayButton" type="Button" parent="HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(55, 0)
layout_mode = 2
text = "Play"

[node name="PauseButton" type="Button" parent="HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(55, 0)
layout_mode = 2
disabled = true
text = "Pause"
